# strand

./: .gitignore  CMakeLists.txt  LICENSE
header/: strand.h
source/: main.c  strand-x86-64.asm  strand.c
